testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment.errors.txt
a.js(4,7): error TS2339: Property 'Inner' does not exist on type 'typeof O'.
a.js(8,12): error TS2749: 'Outer' refers to a value, but is being used as a type here. Did you mean 'typeof Outer'?
a.js(11,12): error TS2503: Cannot find namespace 'Outer'.


==== a.js (3 errors) ====
    var Outer = class O {
        m(x, y) { }
    }
    Outer.Inner = class I {
          ~~~~~
!!! error TS2339: Property 'Inner' does not exist on type 'typeof O'.
        n(a, b) { }
    
    }
    /** @type {Outer} */
               ~~~~~
!!! error TS2749: 'Outer' refers to a value, but is being used as a type here. Did you mean 'typeof Outer'?
    var si
    si.m
    /** @type {Outer.Inner} */
               ~~~~~
!!! error TS2503: Cannot find namespace 'Outer'.
    var oi
    oi.n
    
    